@@ -38,6 +38,8 @@
 	though these are not a part of the format. (added to
 	support some scripted apps that include extra
 	newlines...)
+	<LI>Changed the leading space handling of blocks to more
+	closely match the standard browser behavior.
 
 	<H3>Bug Fixes</H3>
 
